# rom

./: .gitignore  Cargo.toml  flake.nix
.github/workflows/: rust.yml
crates/cognos/: Cargo.toml  README.md
crates/cognos/src/: aterm.rs  state.rs
crates/cognos/src/internal/: mod.rs
crates/rom-cli/: Cargo.toml
crates/rom-cli/src/: cli.rs  lib.rs  log_store.rs
crates/rom-cli/src/cli/: tui_runtime.rs
crates/rom-core/: Cargo.toml
crates/rom-core/src/: cache.rs  display.rs  graph.rs  lib.rs  monitor.rs  state.rs  tui.rs  types.rs  update.rs
crates/rom-core/src/state/: identity.rs  snapshot.rs
crates/rom-core/src/tui/: activity.rs  logs.rs
crates/rom-core/src/tui/activity/: layout.rs  row.rs
crates/rom-core/src/update/: maintenance.rs
crates/rom-core/tests/: display.rs  state.rs  tui.rs  update.rs
crates/rom-core/tests/tui/: collapse.rs  downloads.rs  layout.rs  logs.rs  support.rs
rom/: Cargo.toml
