[workspace]
members = ["crates/*", "rom"]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"
description = "Pretty build graphs for your pretty Nix builds"
rust-version = "1.92.0"
license = "EUPL-1.2"

[workspace.dependencies]
rom-core = { path = "./crates/rom-core", version = "0.2.0" }
rom-cli = { path = "./crates/rom-cli", version = "0.2.0" }
cognos = { path = "./crates/cognos", version = "1.0.0" }     # cognos is versioned independently

anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_repr = "0.1.20"
crossterm = "0.29.0"
ratatui = "0.30.0"
indexmap = { version = "2.14.0", features = ["serde"] }
csv = "1.4.0"
chrono = "0.4.44"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
eyre = "0.6.12"
dirs = "6.0.0"
tempfile = "3.27.0"
has-nerd-font = "0.20260228.0"
unicode-width = "0.2.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
