[package]
name = "rom"
description.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true

[[bin]]
name = "rom"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
rom-core.workspace = true
rom-cli.workspace = true
eyre.workspace = true
