[package]
name = "cognos"
description = "Minimalistic parser for Nix's ATerm .drv and internal-json log formats"
version = "1.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme = true

[dependencies]
serde.workspace = true
serde_repr.workspace = true
serde_json.workspace = true
