[package]
name = "rom-cli"
description = "CLI interface for ROM"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
rom-core.workspace = true
cognos.workspace = true

clap.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
eyre.workspace = true
