[package]
name = "rom-core"
description = "Core monitoring library for ROM"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
cognos.workspace = true

serde.workspace = true
serde_json.workspace = true
crossterm.workspace = true
ratatui.workspace = true
ansi-to-tui.workspace = true
nucleo-matcher.workspace = true
indexmap.workspace = true
csv.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
eyre.workspace = true
dirs.workspace = true
has-nerd-font.workspace = true

[dev-dependencies]
tempfile.workspace = true
